--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,8 @@ sudo: required
 language: cpp
 compiler:
   - gcc
+before_script:
+  - sudo apt-get install coreutils
 jobs:
   include:
     - stage: AnacondaEnv
