--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,13 @@ sudo: required
 language: cpp
 compiler:
   - gcc
+addons:
+  apt:
+    sources:
+        - ubuntu-toolchain-r-test
+    packages:
+        - gcc-5
+        - g++-5
 script:
    - Tests/Training/AnacondaEnv/testSetupCpuEnv.sh
    - Tests/Training/Ops/buildOps.sh
